--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-      "name": "Evil Bot",
-      "description": "An Anime Theme Telegram group management bot.",
+      "name": "シ︎𝙊𝙑𝙀𝙍𝙇𝙊𝘼𝘿𓆪 Bot",
+      "description": "An Anime Theme Telegram group management bot made by @HARAMI_BACHA_HU_SAMBHAL_KAR give some space in your group.",
       "keywords": [
          "telegram",
          "anime",
@@ -9,8 +9,7 @@
          "Evil"
       ],
     
-   "logo":    "https://telegra.ph/file/2345311d29a66213a9d98.jpg",  
-   "repository": "https://github.com/shrvan42/EvilBot",
+   "logo":    "https://telegra.ph/file/24404f04af25619c91f80.jpg",  
    "addons": [
           {
          "options": {
