--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-      "name": "Evil Bot",
-      "description": "An Anime Theme Telegram group management bot.",
+      "name": " シ︎𝙊𝙑𝙀𝙍𝙇𝙊𝘼𝘿𓆪 Bot",
+      "description": "An Anime Theme Telegram group management bot help you to grow up your account made by @HARAMI_BACHA_HU_SAMBHAL_KAR .",
       "keywords": [
          "telegram",
          "anime",
