--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "Evil Bot",
+      "name": "kjbbbb",
       "description": "An Anime Theme Telegram group management bot.",
       "keywords": [
          "telegram",
